turtleart.lessons.turtleart.Main.DiskFourth.scala.error
Source:2: error: not found: value angle
while (setCap(angle:Double) != 90) {
              ^