turtleart.lessons.turtleart.Main.DiskFourth.scala.code
while (setCap(angle:Double) != 90) {
	avance(100:Double)
	recule(100:Double)
	droite(1:Double)
}
